refactor: rename main stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@
  * Licensed under MIT (https://github.com/apareciumlabs/gulp-static-seed/blob/master/LICENSE)
  */
 /*! ========================================================================= *
-	Aparecium Labs - Maintenance Page
+	Gulp Static Seed by Aparecium Labs
 	========================================================================= *
 	Version: 0.1.0
-	Last change: 06-08-2018
+	Last change: 09-08-2018
 	Author: Brion Silva
 	========================================================================= *
-	GitHub Repo: https://github.com/apareciumlabs/website-maintenance-page
+	GitHub Repo: https://github.com/brionmario/gulp-static-seed
 	========================================================================= *
 	Licensed under MIT
 */
