refactor(style): moved partials to a separate folder

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,11 +9,11 @@
 	========================================================================= *
 	Licensed under MIT
 */
-@import "colors";
-@import "variables.scss";
-@import "core";
-@import "global.scss";
-@import "header";
-@import "sections";
-@import "footer.scss";
-@import "responsive";
+@import "partials/colors";
+@import "partials/variables";
+@import "partials/core";
+@import "partials/global";
+@import "partials/header";
+@import "partials/sections";
+@import "partials/footer";
+@import "partials/responsive";
