--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ html {
 
 .overlay {
   background-repeat: no-repeat;
-  background-image: url(../assets/img/bg.png);
+  background-image: url(../../assets/img/bg.png);
   background-size: cover;
   background-position: center center;
   width: 100%;
