feat: modify app to load vendor packages automatically :sparkles:

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -42,7 +42,7 @@
 }
 .overlay{
   background-repeat: no-repeat;
-  background-image: url(../../../assets/img/bg.png);
+  background-image: url(assets/img/bg.png);
   background-size: cover;
   background-position: center center;
   width: 100%;
