--- a/src/sass/partials/_sections.scss
+++ b/src/sass/partials/_sections.scss
@@ -41,7 +41,7 @@
         border: 0;
         outline: 0;
         padding: 0 140px 0 25px;
-        transition: all .2s;
+        transition: all 0.2s;
         background: $porcelain;
         box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.1);
         border: 1px solid transparent;
@@ -56,10 +56,10 @@
         top: 0;
         bottom: 0;
         right: 0;
-        font-size: .9em;
+        font-size: 0.9em;
         outline: 0;
         border-radius: 0 2px 2px 0;
-        transition: all .3s;
+        transition: all 0.3s;
         background: $secondary-color;
         color: $white;
         &:hover {
