--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,8 +1,9 @@
-@import "partials/colors";
-@import "partials/variables";
-@import "partials/core";
-@import "partials/global";
-@import "partials/header";
-@import "partials/sections";
-@import "partials/footer";
-@import "partials/responsive";
+@import 'partials/colors';
+@import 'partials/variables';
+@import 'partials/core';
+@import 'partials/global';
+@import 'partials/header';
+@import 'partials/sections';
+@import 'partials/footer';
+@import 'partials/responsive';
+@import 'partials/forms';
